syntax = "proto3";

package tinkoff.public.invest.api.contract.v1;

option go_package = "Tinkoff/investAPI";
option java_package = "ru.tinkoff.piapi.contract.v1";
option java_multiple_files = true;
option csharp_namespace = "Tinkoff.InvestAPI.V1";
option objc_class_prefix = "TIAPI";
option php_namespace = "Tinkoff\\Invest\\V1";

// Денежная сумма в определенной валюте
message MoneyValue {

  // строковый ISO-код валюты
  string currency = 1;

  // целая часть суммы, может быть отрицательным числом
  int64 units = 2;

  // дробная часть суммы, может быть отрицательным числом
  int32 nano = 3;
}

// Котировка - денежная сумма без указания валюты
message Quotation {

  // целая часть суммы, может быть отрицательным числом
  int64 units = 1;

  // дробная часть суммы, может быть отрицательным числом
  int32 nano = 2;
}

// Режим торгов инструмента
enum SecurityTradingStatus {
  SECURITY_TRADING_STATUS_UNSPECIFIED = 0; //Торговый статус не определён
  SECURITY_TRADING_STATUS_NOT_AVAILABLE_FOR_TRADING = 1; //Недоступен для торгов
  SECURITY_TRADING_STATUS_OPENING_PERIOD = 2; //Период открытия торгов
  SECURITY_TRADING_STATUS_CLOSING_PERIOD = 3; //Период закрытия торгов
  SECURITY_TRADING_STATUS_BREAK_IN_TRADING = 4; //Перерыв в торговле
  SECURITY_TRADING_STATUS_NORMAL_TRADING = 5; //Нормальная торговля
  SECURITY_TRADING_STATUS_CLOSING_AUCTION = 6; //Аукцион закрытия
  SECURITY_TRADING_STATUS_DARK_POOL_AUCTION = 7; //Аукцион крупных пакетов
  SECURITY_TRADING_STATUS_DISCRETE_AUCTION = 8; //Дискретный аукцион
  SECURITY_TRADING_STATUS_OPENING_AUCTION_PERIOD = 9; //Аукцион открытия
  SECURITY_TRADING_STATUS_TRADING_AT_CLOSING_AUCTION_PRICE = 10; //Период торгов по цене аукциона закрытия
}
